--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    hello
+    <div class="container-one">
+        <div class="top">
+            <img src="CSS - My Site Images/cloud.png" alt="" class="top-cloud">
+        </div>
+        <h1>I'm Rohan</h1>
+        <p>I am web Devoloper</p>
+        <div class="bottom">
+            <img src="CSS - My Site Images/mountain.png"  alt="">
+            <img src="CSS - My Site Images/cloud.png" alt="" class="bottom-cloud">
+        </div>
+    </div>
+    <div class="container-two">
+
+    </div>
+    <div class="container-three">
+
+    </div>
 </body>
 </html>
