--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,62 @@
     <title>Rohan Gope</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    <div class="container-one">
+    <div class="top-container">
         <div class="top">
-            <img src="CSS - My Site Images/cloud.png" alt="" class="top-cloud">
+            <img src="My_Site_Images/cloud.png" alt="" class="top-cloud">
         </div>
-        <h1>I'm Rohan</h1>
-        <p>I am web Devoloper</p>
+        <h1>I'm Rohan.</h1>
+        <h2 class="info ">a Devoloper.</h2>
         <div class="bottom">
-            <img src="CSS - My Site Images/mountain.png"  alt="">
-            <img src="CSS - My Site Images/cloud.png" alt="" class="bottom-cloud">
+            <img src="My_Site_Images/mountain.png" alt="">
+            <img src="My_Site_Images/cloud.png" alt="" class="bottom-cloud">
         </div>
     </div>
-    <div class="container-two">
-
+    <div class="middle-container">
+        <div class="profile">
+            <img src="My_Site_Images/DP-modified.png" alt="" class="my-img">
+            <h2>Hello.</h2>
+            <p class="my-des">I am B.Tech 1st year student in <a href="https://jgec.ac.in/">Jalpaiguri Goverment Engineering
+                    College. </a>I am a Web Devoloper and a Competative Programmer and also a Graphic Designer</p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="computer" src="My_Site_Images/computer.png" alt="">
+                <h3>Programmar & Web Devoloper</h3>
+                <p class="div-skill-row-description1">I am a Programmar and Web Devoloper.</p>
+            </div>
+            <div class="skill-row">
+                <img class="graphicdesigner" src="My_Site_Images/graphicdesigner-modified.png" alt="">
+                <h3>Graphic Designer</h3>
+                <p class="div-skill-row-description2">I am also a graphic designer. Photoshop and Canva is my graphic designing tools</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>If you need Website and Designs</h3>
+            <p>I can provide you professonal websites and creative designs</p>
+            <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+        </div>
     </div>
-    <div class="container-three">
 
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://twitter.com/">Twitter</a>
+        <a class="footer-link" href="https://rohan00001.github.io/CV/">Website</a>
+        <p class="copyright">© 2022 Rohan Gope</p>
     </div>
+
 </body>
+
 </html>
