--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
     <div class="bottom-container">
-        <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+        <a class="footer-link" href="https://www.linkedin.com/in/rohan-gope-a96072199/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/">Twitter</a>
         <a class="footer-link" href="https://rohan00001.github.io/CV/">Website</a>
         <p class="copyright">© 2022 Rohan Gope</p>
